authentication/deploy/deployment-mysql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-db
  namespace: egs7
spec:
  selector:
    matchLabels:
      app: users-db
  template:
    metadata:
      labels:
        app: users-db
    spec:
      containers:
      - name: users-db
        image: registry.deti:5000/biblify/db-users:21062022
        ports:
        - containerPort: 3306
          name: users-db
        volumeMounts:
          - name: mysql-pv-claim
            mountPath: /var/lib/mysql
      volumes:
        - name: mysql-pv-claim
          persistentVolumeClaim:
            claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: users-db
  namespace: egs7
spec:
  ports:
  - port: 3306
    protocol: TCP
    name: users-db
  selector:
    app: users-db
  type: NodePort
